<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="device_disconnect">离线</string>
    <string name="scan_text">将二维码放入扫描框内, 即可自动扫描</string>
    <string name="app_error">数据加载异常，请联系专业人士</string>
    <string name="title_app_name">ROKI智能烹饪</string>
    <string name="title_about">关于软件</string>
    <string name="add_dev">点击添加更多联网设备</string>
    <string name="search_again">重新搜索</string>
    <string name="cancel_search">取消搜索</string>
    <string name="roki_error_no_wifi">无可用WiFi网络，请检查WiFi网络</string>
    <string name="roki_wifi_pwd_hint">请输入WiFi密码</string>
    <string name="love_meal">来吃有爱的饭</string>
    <string name="today_main">今日主打</string>
    <string name="today_menu">今日菜谱</string>
    <string name="log">烹饪，从未如此简单</string>
    <string name="type">型号：</string>
    <string name="version">系统版本：</string>
    <string name="setting_add_login">您还未登录,请点击上方登录</string>
    <string name="setting_add_newdev">添加厨电</string>
    <string name="setting_dev_manage">设备管理</string>
    <string name="setting_account_manage">账户管理</string>
    <string name="setting_network">烟机联网</string>
    <string name="setting_intel_setting">智能设定</string>
    <string name="setting_foresale">售后服务</string>
    <string name="setting_myroki">关于软件</string>
    <string name="recover_setting">恢复默认设置</string>
    <string name="inactive_hint">您尚未联网激活，此功能暂不可用，想更好的使用我，请点击联网并激活</string>
    <string name="connect_and_active">联网并激活</string>
    <string name="disconnect_hint">您还尚未联网，想更好的使用我，请点击联网设置</string>
    <string name="setting_wifi">联网设置</string>
    <string name="unlogin_hint">您尚未登录，此功能暂不可用，想更好的使用我，请点击登录</string>
    <string name="official_website">roki官网</string>
    <string name="usage_terms">使用条款</string>
    <string name="company_title">公司名称 : </string>
    <string name="company_name">杭州老板电器股份有限公司</string>
    <string name="system_version">系统版本 : </string>
    <string name="copyright">Copyright © 2011-2018 ROKI. All rights reserved</string>
    <string name="update">软件版本</string>
    <string name="systemupdate">系统升级</string>
    <string name="update_en">Version update</string>
    <string name="apply_foresale">申请售后</string>
    <string name="foresale_phone">售后热线 : 95105855</string>
    <string name="main_account">主账户</string>
    <string name="setting_nickname">昵称 : </string>
    <string name="setting_phone">电话 : </string>
    <string name="dialog_add_user_hint">请使用roki APP扫二维码添加用户</string>
    <string name="add_user">请登录</string>
    <string name="add_device_fail">添加设备失败!</string>
    <string name="unconnect_toast">设备未连接!</string>
    <string name="recipes_category_material">食材分类</string>
    <string name="recipes_category_style">菜系分类</string>
    <string name="recipes_category_taste">口味分类</string>
    <string name="recipes_vegetable">果蔬类</string>
    <string name="recipes_meat">红肉类</string>
    <string name="recipes_egg">蛋禽类</string>
    <string name="recipes_bean">豆制品</string>
    <string name="recipes_aquatic">水产品</string>
    <string name="recipes_main">主食</string>
    <string name="search">搜索</string>
    <string name="cancel">取 消</string>
    <string name="ok_btn">确 定</string>
    <string name="ok_btn2">确 认</string>
    <string name="start_prepare">开始准备</string>
    <string name="start_cook">开始烹饪</string>
    <string name="main_material">主料</string>
    <string name="assist_material">辅料</string>
    <string name="accessory_material">佐料</string>
    <string name="dialog_choose_stove_hint">即将开始烹饪，请选择您要使用的炉头</string>
    <string name="product_time">制作时间</string>
    <string name="next_step">下一步</string>
    <string name="quit">退出</string>
    <string name="cookfinished">煮好了！</string>
    <string name="cookfinishedhit">大厨莫走！开吃前，先拍照，这是美德。</string>
    <string name="othercooked">大家做过的这道菜</string>
    <string name="setTime">设置时间</string>
    <string name="active_welcome">欢迎购买ROBAM的智能产品，点击开始进入无线网连接</string>
    <string name="active_start">开始</string>
    <string name="active_skip">跳过</string>
    <string name="active_skipping">正在跳转</string>
    <string name="active_next">下一步</string>
    <string name="active">激活</string>
    <string name="check_and_active">确认并激活</string>
    <string name="register">注册新号码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="password">密码</string>
    <string name="show_password">显示密码</string>
    <string name="main_phone">您的手机号码</string>
    <string name="your_phone">您的手机号码</string>
    <string name="nickname">昵称</string>
    <string name="confirm_pwd">确认新密码</string>
    <string name="input_identify_code">输入验证码</string>
    <string name="send_identify_code">发送验证码</string>
    <string name="wifi_connected">已连接</string>
    <string name="login">登录</string>
    <string name="account_login">账户登录</string>
    <string name="account_register">账户注册</string>
    <string name="account">账号</string>
    <string name="show_pwd">显示密码</string>
    <string name="notReg">还没注册?</string>
    <string name="device_sync_timeout_error">sync timeout</string>
    <string name="fan_invalid_error">油烟机已离线</string>
    <string name="steam_invalid_error">蒸汽炉已离线</string>
    <string name="stove_invalid_error">灶具已离线</string>
    <string name="stove_notknown_error">未知灶具设备</string>
    <string name="stove_startfire">请先在灶具开火</string>
    <string name="stove_null_error">当前无灶具设备</string>
    <string name="pot_null_error">当前无无人锅设备</string>
    <string name="stovepot_null_error">当前无灶具和无人锅设备</string>
    <string name="dev_invalid_error">没有可用的设备</string>
    <string name="oven_invalid_error">电烤箱已离线</string>
    <string name="micro_invalid_error">微波炉已离线</string>
    <string name="steamoven_invalid_error">烤蒸一体机已离线</string>
    <string name="stove_tempplot_invalid_error">无人锅和灶具已离线</string>
    <string name="stove_tempplot_null_error">无人锅已离线</string>
    <string name="pot_disconnect_hint1">1、请将无人锅放置在烟机附近,距离过远会影响其蓝牙连接;</string>
    <string name="pot_disconnect_hint2">2、无人锅电池可能已经耗尽,请尝试更换新的电池;</string>
    <string name="pot_wait_hint">加热激活无人锅</string>
    <string name="pot_showtemp_stage1">低油温适合软炸</string>
    <string name="pot_showtemp_stage1_desc">最适合爆香将葱姜蒜等辅料,放食材后蛋白质可快速凝固，\n原料不易碎烂，适合滑炒肉丝，鸡蛋等。</string>
    <string name="pot_showtemp_stage2">过热</string>
    <string name="pot_showtemp_stage2_desc">此界面基本不会出现。温度太高啦！要烧着啦！~</string>
    <string name="download_app">下载APP</string>
    <string name="download_andorid">ROKI智能烹饪</string>
    <string name="download_ios">IOS版\nROKI智能烹饪</string>
    <string name="scan_download">『扫一扫』下载手机app，体验远程联动烹饪</string>
    <string name="logout">退出登录</string>
    <string name="share_contrl">分享控制权</string>
    <string name="dev9700">油烟机9700+电磁灶9W70</string>
    <string name="device9700">油烟机9700</string>
    <string name="dev8230">油烟机8230+电磁灶9W70</string>
    <string name="dev">油烟机+电磁灶9W70</string>
    <string name="dev829">消毒柜829</string>
    <string name="dev826">消毒柜826</string>
    <string name="devR028">电烤箱R028</string>
    <string name="devR039">电烤箱R039</string>
    <string name="devR026">电烤箱R026</string>
    <string name="devR016">电烤箱R016</string>
    <string name="devHK906">电烤箱RHK906</string>
    <string name="devS209">蒸汽炉S209</string>
    <string name="devS226">蒸汽炉S226</string>
    <string name="devHS906">蒸汽炉RHS906</string>
    <string name="devS228">蒸汽炉S228</string>
    <string name="delete_hit">不能删除该设备</string>
    <string name="deletefan_hit">不能删除此烟机</string>
    <string name="owner_device">已有厨电</string>
    <string name="enter_phone">请输入您的手机号码</string>
    <string name="sure_exit">残忍退出</string>
    <string name="connectedUser">已连接用户</string>
    <string name="ConnectWifiFail">连接wifi失败</string>
    <string name="pwd">密码</string>
    <string name="update_description"> 发现新版本,是否更新</string>
    <string name="update_newest">当前已是最新版本</string>
    <string name="update_confirm">发现新版本,是否更新?</string>
    <string name="update_check_failure">检查更新失败</string>
    <string name="update_downloading">开始下载新版本,下载完成后安装新版本</string>
    <string name="update_newVerDesc">新版本信息</string>
    <string name="choose_wlan">选取附近的WLAN</string>
    <string name="pwd_hit">请输入WiFi密码</string>
    <string name="confirm">确&#160;&#160;认</string>
    <string name="cancel_">取&#160;&#160;消</string>
    <string name="linkage">联动</string>
    <string name="stove_fan">当开启灶具时，烟机自动开启</string>
    <string name="stove_delay">当关闭灶具，烟机延时</string>
    <string name="ventilation">通风换气</string>
    <string name="open_air">天自动开启换气</string>
    <string name="open_air_auto">天未开启烟机，烟机自动换气</string>
    <string name="week_time">每周固定</string>
    <string name="WED">周三</string>
    <string name="three_min">开启烟机5分钟自动换气</string>
    <string name="delay_min">分钟关闭</string>
    <string name="clear_hit">清洗提示</string>
    <string name="open_clear_hit">开启智能油网清洗提示</string>
    <string name="machineAutoClose">分钟关闭。灶具调整到最大档时，烟机自动调整为爆炒模式</string>
    <string name="forsale_address_hz">浙江省余杭经济开发区临平大道592号</string>
    <string name="forsale_phone_hz">95105855</string>
    <string name="forsale_dialog_hint">您的请求已发送至服务器，请耐心等待ROKI售后的主动回拨</string>
    <string name="one_key">一键售后</string>
    <string name="find">哇哈哈被你发现了，售后人员会主动电话回访哟</string>
    <string name="service_call">全国售后服务：95105855</string>
    <string name="code">编码:</string>
    <string name="model">型号:</string>
    <string name="firemware_version">固件版本: </string>
    <string name="cooker">油烟机: </string>
    <string name="hob">灶具: </string>
    <string name="pot">无人锅: </string>
    <string name="no_repate_cooking">正在烧菜中,不可重复烧菜</string>
    <string name="delete_control">删除控制权</string>
    <string name="finish">已完成~</string>
    <string name="finish2">已完成</string>
    <string name="on_stove_way">正在获取灶具中，请稍等</string>
    <string name="stoveautoset">联动燃气灶</string>
    <string name="steamautoset">联动蒸汽炉</string>
    <string name="microautoset">联动微波炉</string>
    <string name="ovenautoset">联动电烤箱</string>
    <string name="preheating">预热中</string>
    <string name="pausepreheating">暂停预热</string>
    <string name="working">运行中</string>
    <string name="start">开始烹饪</string>
    <string name="oven_in_working">烤箱正在工作</string>
    <string name="steam_in_working">蒸汽炉正在工作</string>
    <string name="micro_in_working">微波炉正在工作</string>
    <string name="yuyue">预约开始时间</string>
    <string name="notCanWork">不可操纵,请先暂停工作</string>
    <string name="canNotPause">不允许暂停</string>
    <string name="unableChange">无法调整参数</string>
    <string name="app_name">My Application</string>
    <string name="healthy_cooking">健 康 烹 饪</string>
    <string name="over_heated">过 热</string>
    <string name="dry_cleaning">防 干 烧</string>
    <string name="add_pot">添加无人锅</string>
    <string name="add_pot_desc">烹饪美好生活~</string>
    <string name="pot_alarm_tmperature_sensor_desc">锅温度传感器故障,拆下手柄擦干后重试</string>
    <string name="pot_alarm_low_battery">无人锅电池电量低</string>
    <string name="pot_alarm_dry_fire">无人锅干烧预警</string>
    <string name="pot_name">"无人锅"</string>
    <string name="recipe_error">菜谱数据异常</string>
    <string name="no_stove">没有可用灶具</string>
    <string name="no_pot">没有可用无人锅</string>
    <string name="get_recipefail_pleasechecknet">获取菜谱数据失败,请检查网络</string>
    <string name="recoverDefaultSetting"> </string>
    <string name="get_recipefail_chk_and_retry">获取菜谱数据失败,请检查网络,并点击上面图标重新获取</string>
    <string name="device_disconnext_bymanual">设备离线中,请手动关闭</string>
    <string name="device_close_bymanual">请手动关闭设备</string>
    <string name="light">照明</string>
    <string name="fan_control">风量控制</string>
    <string name="hits_p9">当灶具火力最大时，油烟机自动调整为爆炒模式</string>
    <string name="hits_max">当灶具火力最大时，油烟机自动调整为爆炒模式</string>
    <string name="gear">档</string>
    <string name="stove_close">已关闭</string>
    <string name="stove_head_left">左炉头</string>
    <string name="stove_head_right">右炉头</string>
    <string name="stove_select_head">请选择你将要使用的炉头</string>
    <string name="stove_healthy_hot_oil_desc">智能识别油温，您的\n炒炸小助手</string>
    <string name="long_click_min_level">长按1s至1档</string>
    <string name="long_click_max_level">长按1s至10档</string>
</resources>