<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_layout_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24px"
            android:layout_marginTop="12px"
            android:text="@string/device_model_health_hot_oil_text"
            android:textColor="#ffffff"
            android:textSize="34px" />


        <FrameLayout
            android:id="@+id/fl_back_oil"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6px"
            android:padding="16px">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@mipmap/img_back_oil" />
        </FrameLayout>


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24px"
        android:text="@string/stove_healthy_hot_oil_desc"
        android:textColor="#666666"
        android:textSize="28px" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24px"
        android:layout_marginTop="30px"
        android:layout_marginRight="24px">

        <TextView
            android:id="@+id/txt_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stove_select_head"
            android:textColor="#ffffff"
            android:textSize="20px" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_select"
            android:layout_marginTop="20px"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/left_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/left"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6px"
                    android:text="@string/stove_head_left"
                    android:textColor="#3468d3"
                    android:textSize="20px" />

                <ImageView
                    android:id="@+id/left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@mipmap/stove_head_show" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/right_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">

                <ImageView
                    android:id="@+id/right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/stove_head_show" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/right"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6px"
                    android:text="@string/stove_head_right"
                    android:textColor="#3468d3"
                    android:textSize="20px" />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
