<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/stove_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/stove_h"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:padding="3dp"
        android:src="@mipmap/stove_timer_gray" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/stove_h"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="44：00"
        android:textColor="#666666"
        android:textSize="30sp"
        android:visibility="gone" />
<LinearLayout
    android:id="@+id/ll_head_postion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_above="@id/stove_timer"
    android:gravity="center"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="6dp">

    <TextView
        android:id="@+id/head_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stove_head_left"
        android:textColor="#666666"
        android:textSize="26px" />

    <TextView
        android:id="@+id/work_time"
        android:text="00:00"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#666666"
        android:textSize="26px" />
</LinearLayout>

    <ImageView
        android:id="@+id/decrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="40dp"
        android:layout_toLeftOf="@id/stove_h"
        android:padding="3dp"
        android:src="@mipmap/stove_fire_decrease_gray" />

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/long_click_min_level"
        android:textColor="#666666"
        android:textSize="18px"
        android:id="@+id/tv_long_press_decrease"
        android:layout_below="@id/decrease"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:layout_toLeftOf="@id/stove_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@id/stove_h"
        android:padding="3dp"
        android:src="@mipmap/stove_fire_add_gray" />

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/long_click_max_level"
        android:textColor="#666666"
        android:gravity="center"
        android:textSize="18px"
        android:id="@+id/tv_long_press_add"
        android:layout_below="@id/add"
        android:layout_marginRight="40dp"
        android:layout_toRightOf="@id/stove_h"
        android:padding="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_stove_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stove_h"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/stove_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@mipmap/stove_power_white" />

        <TextView
            android:id="@+id/power_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16px"
            android:text="@string/stove_close"
            android:textColor="#ffffff"
            android:textSize="26px" />


    </LinearLayout>


    <TextView
        android:id="@+id/fire_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="——"
        android:textColor="#666666" />

    <ImageView
        android:id="@+id/stove_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/stove_head_gray" />

    <ImageView
        android:id="@+id/anim_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@mipmap/stove_anim_img"
        android:visibility="gone" />
</RelativeLayout>
